--- a/book/stylesheet.css
+++ b/book/stylesheet.css
@@ -1,97 +1,154 @@
+@media (min-width: 992px) {
+    #context {
+        top: 10%;
+        position: absolute;
+    }
+}
+
+.page .glyphicon {
+
+    font-size: 40px;
+    color: #ccc;
+    text-align: center;
+    top: 50%;
+    position: fixed;
+
+}
+
+.page > .next {
+    position: absolute;
+    right: -135px;
+    bottom: 0;
+    /* margin-right: -671px; */
+    max-width: 150px;
+    min-width: 90px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    font-size: 40px;
+    color: #ccc;
+    text-align: center;
+    -webkit-transition: all 350ms ease;
+    -moz-transition: all 350ms ease;
+    -o-transition: all 350ms ease;
+    transition: all 350ms ease;
+}
+
+.page > .previous {
+    position: absolute;
+    left: -85px;
+    bottom: 0;
+    /* margin-right: -671px; */
+    max-width: 150px;
+    min-width: 90px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    font-size: 40px;
+    color: #ccc;
+    text-align: center;
+    -webkit-transition: all 350ms ease;
+    -moz-transition: all 350ms ease;
+    -o-transition: all 350ms ease;
+    transition: all 350ms ease;
+}
+
 body {
-  font-family: sans-serif;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  font: 13px Helvetica, arial, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
-  line-height: 1.4;
-  color: #333333;
-  font-family: "Helvetica Neue", Helvetica, Arial, freesans, sans-serif;
-  font-size: 16px;
-  line-height: 1.6;
-  word-wrap: break-word;
+    font-family: sans-serif;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    font: 13px Helvetica, arial, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+    line-height: 1.4;
+    color: #333333;
+    font-family: "Helvetica Neue", Helvetica, Arial, freesans, sans-serif;
+    font-size: 16px;
+    line-height: 1.6;
+    word-wrap: break-word;
 }
 
 body a {
-  background: transparent;
+    background: transparent;
 }
 
 body a:active,
 body a:hover {
-  outline: 0;
+    outline: 0;
 }
 
 body strong {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+    font-size: 2em;
+    margin: 0.67em 0;
 }
 
 body img {
-  border: 0;
+    border: 0;
 }
 
 body hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    height: 0;
 }
 
 body pre {
-  overflow: auto;
+    overflow: auto;
 }
 
 body code,
 body pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
+    font-family: monospace, monospace;
+    font-size: 1em;
 }
 
 body table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 body td,
 body th {
-  padding: 0;
+    padding: 0;
 }
 
 body * {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body a {
-  color: #4183c4;
-  text-decoration: none;
+    color: #4183c4;
+    text-decoration: none;
 }
 
 body a:hover,
 body a:focus,
 body a:active {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 body hr {
-  height: 0;
-  margin: 15px 0;
-  overflow: hidden;
-  background: transparent;
-  border: 0;
-  border-bottom: 1px solid #ddd;
+    height: 0;
+    margin: 15px 0;
+    overflow: hidden;
+    background: transparent;
+    border: 0;
+    border-bottom: 1px solid #ddd;
 }
 
 body hr:before,
 body hr:after {
-  display: table;
-  content: " ";
+    display: table;
+    content: " ";
 }
 
 body hr:after {
-  clear: both;
+    clear: both;
 }
 
 body h1,
@@ -100,86 +157,86 @@ body h3,
 body h4,
 body h5,
 body h6 {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  line-height: 1.1;
-  padding-left: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    line-height: 1.1;
+    padding-left: 10px;
 }
 
 body h1 {
-  font-size: 30px;
+    font-size: 30px;
 }
 
 body h2 {
-  font-size: 21px;
+    font-size: 21px;
 }
 
 body h3 {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 body h4 {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 body h5 {
-  font-size: 12px;
+    font-size: 12px;
 }
 
 body h6 {
-  font-size: 11px;
+    font-size: 11px;
 }
 
 body blockquote {
-  margin: 0;
+    margin: 0;
 }
 
 body ul,
 body ol {
-  padding: 0;
-  margin-top: 0;
-  margin-bottom: 0;
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 body ol ol {
-  list-style-type: lower-roman;
+    list-style-type: lower-roman;
 }
 
 body dd {
-  margin-left: 0;
+    margin-left: 0;
 }
 
 body code,
 body pre {
-  font-size: 12px;
+    font-size: 12px;
 }
 
 body pre {
-  margin-top: 0;
-  margin-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-body>*:first-child {
-  margin-top: 0 !important;
+body > *:first-child {
+    margin-top: 0 !important;
 }
 
-body>*:last-child {
-  margin-bottom: 0 !important;
+body > *:last-child {
+    margin-bottom: 0 !important;
 }
 
 body .anchor {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  display: block;
-  padding-right: 6px;
-  padding-left: 30px;
-  margin-left: -30px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    display: block;
+    padding-right: 6px;
+    padding-left: 30px;
+    margin-left: -30px;
 }
 
 body .anchor:focus {
-  outline: none;
+    outline: none;
 }
 
 body h1,
@@ -188,43 +245,43 @@ body h3,
 body h4,
 body h5,
 body h6 {
-  position: relative;
-  margin-top: 1em;
-  margin-bottom: 16px;
-  font-weight: bold;
-  line-height: 1.4;
+    position: relative;
+    margin-top: 1em;
+    margin-bottom: 16px;
+    font-weight: bold;
+    line-height: 1.4;
 }
 
 body h1 {
-  padding-bottom: 0.3em;
-  font-size: 2.25em;
-  line-height: 1.2;
-  border-bottom: 1px solid #eee;
+    padding-bottom: 0.3em;
+    font-size: 2.25em;
+    line-height: 1.2;
+    border-bottom: 1px solid #eee;
 }
 
 body h2 {
-  padding-bottom: 0.3em;
-  font-size: 1.75em;
-  line-height: 1.225;
-  border-bottom: 1px solid #eee;
+    padding-bottom: 0.3em;
+    font-size: 1.75em;
+    line-height: 1.225;
+    border-bottom: 1px solid #eee;
 }
 
 body h3 {
-  font-size: 1.5em;
-  line-height: 1.43;
+    font-size: 1.5em;
+    line-height: 1.43;
 }
 
 body h4 {
-  font-size: 1.25em;
+    font-size: 1.25em;
 }
 
 body h5 {
-  font-size: 1em;
+    font-size: 1em;
 }
 
 body h6 {
-  font-size: 1em;
-  color: #777;
+    font-size: 1em;
+    color: #777;
 }
 
 body p,
@@ -234,502 +291,508 @@ body ol,
 body dl,
 body table,
 body pre {
-  margin-top: 0;
-  margin-bottom: 16px;
+    margin-top: 0;
+    margin-bottom: 16px;
 }
 
 body hr {
-  height: 4px;
-  padding: 0;
-  margin: 16px 0;
-  background-color: #e7e7e7;
-  border: 0 none;
+    height: 4px;
+    padding: 0;
+    margin: 16px 0;
+    background-color: #e7e7e7;
+    border: 0 none;
 }
 
 body ul,
 body ol {
-  padding-left: 2em;
+    padding-left: 2em;
 }
 
 body ol ol,
 body ol ul {
-  margin-top: 0;
-  margin-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-body li>p {
-  margin-top: 16px;
+body li > p {
+    margin-top: 16px;
 }
 
 body dl {
-  padding: 0;
+    padding: 0;
 }
 
 body dl dt {
-  padding: 0;
-  margin-top: 16px;
-  font-size: 1em;
-  font-style: italic;
-  font-weight: bold;
+    padding: 0;
+    margin-top: 16px;
+    font-size: 1em;
+    font-style: italic;
+    font-weight: bold;
 }
 
 body dl dd {
-  padding: 0 16px;
-  margin-bottom: 16px;
+    padding: 0 16px;
+    margin-bottom: 16px;
 }
 
 body blockquote {
-  padding: 0 15px;
-  color: #777;
-  border-left: 4px solid #ddd;
+    padding: 0 15px;
+    color: #777;
+    border-left: 4px solid #ddd;
 }
 
-body blockquote>:first-child {
-  margin-top: 0;
+body blockquote > :first-child {
+    margin-top: 0;
 }
 
-body blockquote>:last-child {
-  margin-bottom: 0;
+body blockquote > :last-child {
+    margin-bottom: 0;
 }
 
 body table {
-  display: block;
-  width: 100%;
-  overflow: auto;
+    display: block;
+    width: 100%;
+    overflow: auto;
 }
 
 body table th {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body table th,
 body table td {
-  padding: 6px 13px;
-  border: 1px solid #ddd;
+    padding: 6px 13px;
+    border: 1px solid #ddd;
 }
 
 body table tr {
-  background-color: #fff;
-  border-top: 1px solid #ccc;
+    background-color: #fff;
+    border-top: 1px solid #ccc;
 }
 
 body table tr:nth-child(2n) {
-  background-color: #f8f8f8;
+    background-color: #f8f8f8;
 }
 
 body img {
-  max-width: 100%;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    max-width: 100%;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body code {
-  padding: 0;
-  padding-top: 0.2em;
-  padding-bottom: 0.2em;
-  margin: 0;
-  font-size: 85%;
-  background-color: rgba(0,0,0,0.04);
-  border-radius: 3px;
+    padding: 0;
+    padding-top: 0.2em;
+    padding-bottom: 0.2em;
+    margin: 0;
+    font-size: 85%;
+    background-color: rgba(0, 0, 0, 0.04);
+    border-radius: 3px;
 }
 
 body code:before,
 body code:after {
-  letter-spacing: -0.2em;
-  content: "\00a0";
+    letter-spacing: -0.2em;
+    content: "\00a0";
 }
 
-body pre>code {
-  padding: 0;
-  margin: 0;
-  font-size: 100%;
-  white-space: pre;
-  background: transparent;
-  border: 0;
+body pre > code {
+    padding: 0;
+    margin: 0;
+    font-size: 100%;
+    white-space: pre;
+    background: transparent;
+    border: 0;
 }
 
 body .highlight {
-  margin-bottom: 16px;
+    margin-bottom: 16px;
 }
 
 body .highlight pre,
 body pre {
-  padding: 16px;
-  overflow: auto;
-  font-size: 85%;
-  line-height: 1.45;
-  background-color: #f7f7f7;
-  border-radius: 3px;
+    padding: 16px;
+    overflow: auto;
+    font-size: 85%;
+    line-height: 1.45;
+    background-color: #f7f7f7;
+    border-radius: 3px;
 }
 
 body .highlight pre {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 body pre {
-  word-wrap: normal;
+    word-wrap: normal;
 }
 
 body pre code {
-  display: inline;
-  max-width: initial;
-  padding: 0;
-  margin: 0;
-  overflow: initial;
-  line-height: inherit;
-  word-wrap: normal;
-  background-color: transparent;
-  border: 0;
+    display: inline;
+    max-width: initial;
+    padding: 0;
+    margin: 0;
+    overflow: initial;
+    line-height: inherit;
+    word-wrap: normal;
+    background-color: transparent;
+    border: 0;
 }
 
 body pre code:before,
 body pre code:after {
-  content: normal;
+    content: normal;
 }
 
 body .highlight {
-  background: #ffffff;
+    background: #ffffff;
 }
 
 body .highlight .c {
-  color: #999988;
-  font-style: italic;
+    color: #999988;
+    font-style: italic;
 }
 
 body .highlight .err {
-  color: #a61717;
-  background-color: #e3d2d2;
+    color: #a61717;
+    background-color: #e3d2d2;
 }
 
 body .highlight .k {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body .highlight .o {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body .highlight .cm {
-  color: #999988;
-  font-style: italic;
+    color: #999988;
+    font-style: italic;
 }
 
 body .highlight .cp {
-  color: #999999;
-  font-weight: bold;
+    color: #999999;
+    font-weight: bold;
 }
 
 body .highlight .c1 {
-  color: #999988;
-  font-style: italic;
+    color: #999988;
+    font-style: italic;
 }
 
 body .highlight .cs {
-  color: #999999;
-  font-weight: bold;
-  font-style: italic;
+    color: #999999;
+    font-weight: bold;
+    font-style: italic;
 }
 
 body .highlight .gd {
-  color: #000000;
-  background-color: #ffdddd;
+    color: #000000;
+    background-color: #ffdddd;
 }
 
 body .highlight .gd .x {
-  color: #000000;
-  background-color: #ffaaaa;
+    color: #000000;
+    background-color: #ffaaaa;
 }
 
 body .highlight .ge {
-  font-style: italic;
+    font-style: italic;
 }
 
 body .highlight .gr {
-  color: #aa0000;
+    color: #aa0000;
 }
 
 body .highlight .gh {
-  color: #999999;
+    color: #999999;
 }
 
 body .highlight .gi {
-  color: #000000;
-  background-color: #ddffdd;
+    color: #000000;
+    background-color: #ddffdd;
 }
 
 body .highlight .gi .x {
-  color: #000000;
-  background-color: #aaffaa;
+    color: #000000;
+    background-color: #aaffaa;
 }
 
 body .highlight .go {
-  color: #888888;
+    color: #888888;
 }
 
 body .highlight .gp {
-  color: #555555;
+    color: #555555;
 }
 
 body .highlight .gs {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body .highlight .gu {
-  color: #800080;
-  font-weight: bold;
+    color: #800080;
+    font-weight: bold;
 }
 
 body .highlight .gt {
-  color: #aa0000;
+    color: #aa0000;
 }
 
 body .highlight .kc {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body .highlight .kd {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body .highlight .kn {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body .highlight .kp {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body .highlight .kr {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body .highlight .kt {
-  color: #445588;
-  font-weight: bold;
+    color: #445588;
+    font-weight: bold;
 }
 
 body .highlight .m {
-  color: #009999;
+    color: #009999;
 }
 
 body .highlight .s {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .n {
-  color: #333333;
+    color: #333333;
 }
 
 body .highlight .na {
-  color: teal;
+    color: teal;
 }
 
 body .highlight .nb {
-  color: #0086b3;
+    color: #0086b3;
 }
 
 body .highlight .nc {
-  color: #445588;
-  font-weight: bold;
+    color: #445588;
+    font-weight: bold;
 }
 
 body .highlight .no {
-  color: teal;
+    color: teal;
 }
 
 body .highlight .ni {
-  color: purple;
+    color: purple;
 }
 
 body .highlight .ne {
-  color: #990000;
-  font-weight: bold;
+    color: #990000;
+    font-weight: bold;
 }
 
 body .highlight .nf {
-  color: #990000;
-  font-weight: bold;
+    color: #990000;
+    font-weight: bold;
 }
 
 body .highlight .nn {
-  color: #555555;
+    color: #555555;
 }
 
 body .highlight .nt {
-  color: navy;
+    color: navy;
 }
 
 body .highlight .nv {
-  color: teal;
+    color: teal;
 }
 
 body .highlight .ow {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 body .highlight .w {
-  color: #bbbbbb;
+    color: #bbbbbb;
 }
 
 body .highlight .mf {
-  color: #009999;
+    color: #009999;
 }
 
 body .highlight .mh {
-  color: #009999;
+    color: #009999;
 }
 
 body .highlight .mi {
-  color: #009999;
+    color: #009999;
 }
 
 body .highlight .mo {
-  color: #009999;
+    color: #009999;
 }
 
 body .highlight .sb {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .sc {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .sd {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .s2 {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .se {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .sh {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .si {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .sx {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .sr {
-  color: #009926;
+    color: #009926;
 }
 
 body .highlight .s1 {
-  color: #dd1144;
+    color: #dd1144;
 }
 
 body .highlight .ss {
-  color: #990073;
+    color: #990073;
 }
 
 body .highlight .bp {
-  color: #999999;
+    color: #999999;
 }
 
 body .highlight .vc {
-  color: teal;
+    color: teal;
 }
 
 body .highlight .vg {
-  color: teal;
+    color: teal;
 }
 
 body .highlight .vi {
-  color: teal;
+    color: teal;
 }
 
 body .highlight .il {
-  color: #009999;
+    color: #009999;
 }
 
 body .highlight .gc {
-  color: #999;
-  background-color: #EAF2F5;
+    color: #999;
+    background-color: #EAF2F5;
 }
 
 /* Re:VIEW style */
 
 div.image {
-  text-align: center;
+    text-align: center;
 }
 
 .lead {
 
-  background-color: #dff0d8;
-  padding: 15px;
+    background-color: #dff0d8;
+    padding: 15px;
 }
 
 .lead p {
-  margin: auto;
+    margin: auto;
 }
 
 .emlist {
 }
 
-.inline-code{
-  padding: 0.2em;
-  margin: 0;
-  font-size: 85%;
-  background-color: rgba(0,0,0,0.04);
-  border-radius: 3px;
-}
-.affix{
-  margin-top: -80px;
-  padding-top: 10px;
+.inline-code {
+    padding: 0.2em;
+    margin: 0;
+    font-size: 85%;
+    background-color: rgba(0, 0, 0, 0.04);
+    border-radius: 3px;
 }
 
-.sidenav li a{
-  padding: 4px 20px !important;
-font-size: 15px;
-font-weight: 500;
-color: #767676;
+.affix {
+    margin-top: -80px;
+    padding-top: 10px;
 }
 
-.sidenav li a div{
-
-margin-top: 5px;
-font-size: 13px !important;
+.sidenav li a {
+    padding: 4px 20px !important;
+    font-size: 15px;
+    font-weight: 500;
+    color: #767676;
 }
 
-#current_page{
-  border-left: 4px solid darkcyan;
+.sidenav li a div {
+
+    margin-top: 5px;
+    font-size: 13px !important;
 }
 
-#current_page_toc li{
-  margin-left: 2em;
-}
-#current_page_toc li.active{
+#current_page {
+    border-left: 4px solid darkcyan;
 }
 
+#current_page_toc li {
+    margin-left: 2em;
+}
 
-#current_page_toc li a{
-  font-size: 80%;
+#current_page_toc li.active {
 }
-.glyphicon-link{
-  font-size: 0.5em;
-  left: -10px;
-  top: 10px !important;
-  position: absolute !important;
-  display: none !important;
+
+#current_page_toc li a {
+    font-size: 80%;
 }
-h1:hover>a>a>.glyphicon-link{
-  display: inline-block !important;
+
+.glyphicon-link {
+    font-size: 0.5em;
+    left: -10px;
+    top: 10px !important;
+    position: absolute !important;
+    display: none !important;
 }
-h2:hover>a>a>.glyphicon-link{
-  display: inline-block !important;
+
+h1:hover > a > a > .glyphicon-link {
+    display: inline-block !important;
 }
-h3:hover>a>a>.glyphicon-link{
-  display: inline-block !important;
+
+h2:hover > a > a > .glyphicon-link {
+    display: inline-block !important;
 }
-h4:hover>a>a>.glyphicon-link{
-  display: inline-block !important;
+
+h3:hover > a > a > .glyphicon-link {
+    display: inline-block !important;
+}
+
+h4:hover > a > a > .glyphicon-link {
+    display: inline-block !important;
 }
