--- a/book/stylesheet.css
+++ b/book/stylesheet.css
@@ -56,7 +56,7 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Hiragino Kaku Gothic Pro',Meiryo,'MS PGothic',sans-serif !important;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     font: 13px Helvetica, arial, freesans, clean, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
