--- a/book/layouts/_layout.html.erb
+++ b/book/layouts/_layout.html.erb
@@ -39,7 +39,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/github.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
   <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -55,6 +56,13 @@
         $("#current_page_toc").append("<li><a href='#"+ $(this).find("a").attr("id") +"'>\t"+ $(this).text() +"</a></li>")
         $('body').scrollspy({ target: '.sidenav' })
       })
+      
+      $('.emlist-code pre.emlist').each(function(i, block) {
+        
+        $(this).html("<code class='cs'>" + $(this).html() + "</code>")
+        
+        hljs.highlightBlock(block);
+      });
       
     })
   </script>
