s/エディタ拡張/エディター拡張

--- a/book/layouts/_layout.html.erb
+++ b/book/layouts/_layout.html.erb
@@ -105,7 +105,7 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="<%= yaml["list"][0].gsub(/\.re/,".html")%>">エディタ拡張入門</a>
+      <a class="navbar-brand" href="<%= yaml["list"][0].gsub(/\.re/,".html")%>">エディター拡張入門</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
