--- a/css/agency.css
+++ b/css/agency.css
@@ -254,7 +254,7 @@ fieldset[disabled] .btn-xl.active {
 
     .navbar-default.navbar-shrink {
         padding: 10px 0;
-        background-color: #222;
+        background-color: #1D2128;
     }
 
     .navbar-default.navbar-shrink .navbar-brand {
