--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,17 @@
     padding: 10px 5px 10px;
     height: 20px;
 }
+
+.fb_iframe_widget > span {
+    vertical-align: baseline !important;
+}
+
+#___plusone_0 {
+    width:60px !important;
+}
+
+.shadow {
+    margin-top: 5px; /* 画像の上の余白*/
+    display: inline-block;
+    box-shadow: 0px 5px 15px -5px rgba(0, 0, 0, 0.8); /*横方向　下方向　ぼかし　広がり　色 */
+}
