--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,7 @@
     display: inline-block;
     box-shadow: 0px 5px 15px -5px rgba(0, 0, 0, 0.8); /*横方向　下方向　ぼかし　広がり　色 */
 }
+
+dl {
+    word-wrap: break-word;
+}
