--- a/book/layouts/layout.tex.erb
+++ b/book/layouts/layout.tex.erb
@@ -233,7 +233,7 @@
 \newcommand{\reviewstrike}[1]{#1}
 
 %%%% for ulem.sty:
-%%\renewcommand{\reviewstrike}[1]{\sout{#1}}
+\renewcommand{\reviewstrike}[1]{\sout{#1}}
 %%
 %%%% for jumoline.sty:
 %%\renewcommand{\reviewstrike}[1]{\Middleline{#1}}
