--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,37 @@
     box-shadow: 0px 5px 15px -5px rgba(0, 0, 0, 0.8); /*横方向　下方向　ぼかし　広がり　色 */
 }
 
-#links img{
+#links img {
     margin: 5px 0;
     border: solid;
     border-width: 1px;
     border-color: black;
 }
+
 dl {
     word-wrap: break-word;
+}
+
+#change_log {
+    color: #000000;
+}
+#change_log_body {
+    text-align: left;
+    color: #000000;
+}
+.center {
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+}
+
+.margin_15 {
+    margin: 15px;
+}
+
+#u_contact{
+    text-align: left;
+}
+
+.u_contact_body{
 }
