--- a/book/layouts/layout.tex.erb
+++ b/book/layouts/layout.tex.erb
@@ -286,7 +286,7 @@
 \vspace*{-\headsep}%
 \vspace*{-\topskip}%
 \noindent\hspace*{-1.5truein}\hspace*{-\oddsidemargin}%
-\includegraphics[bb=0 0 595 842,width=149mm]{./images/cover.jpg}%
+\includegraphics[bb=0 0 2480 3507,width=149mm]{./images/cover.jpg}%電子書籍用
   \clearpage
   <% end %>
 \thispagestyle{empty}
